2001-07-27  Ulrich Drepper  <drepper@redhat.com>

	* libio/Makefile: Add rules to check output of tst-fopenloc and
	for memory leaks.
	* libio/tst-fopenloc.c: New file.

	* iconv/gconv_cache.c (__gconv_compare_alias_cache): New function.
	* iconv/gconv_int.h: Add prototype for __gconv_compare_alias_cache.
	* iconv/gconv_charset.h: Replace __gconv_lookup_alias prototype with
	__gconv_compare_alias prototype.
	* iconv/gconv_db.c (__gconv_lookup_alias): Removed.
	(__gconv_compare_alias): New function.
	* locale/findlocale.c (_nl_find_locale): Use __gconv_compare_alias
	instead of calling __gconv_lookup_alias twice and compare here.

2001-07-26  Mark Kettenis  <kettenis@gnu.org>

	* hurd/hurdsig.c (_hurd_internal_post_signal): Fix handling of
	SA_RESETHAND and SA_NODEFER.

2001-07-27  Ulrich Drepper  <drepper@redhat.com>

	* libio/fileops.c (_IO_new_file_fopen): Correctly locate ccs=
	substring.  Don't handle ccs= if no descriptor was allocated.
	Normalize codeset name before calling __wcsmbs_named_conv.
	Initialize transliteration elements.  Free step data structure.
	* libio/iofclose.c (_IO_new_fclose): Correct freeing of the step data.
	* libio/iofwide.c (__libio_translit): Renamed from libio_translit
	and made public.  Various little cleanup changes.
	* wcsmbs/wcsmbsload.h (struct gconv_fcts): Add towc_nsteps and
	tomb_nsteps member.
	* wcsmbs/wcsmbsload.c: Add some casts to avoid warnings.
	(__wcsmbs_gconv_fcts): Initialize towc_nsteps and tomb_nsteps member.
	(getfct): Take additional parameter with pointer to variable where the
	number of steps is stored in.  Disable code which allows to use more
	than one step for now.  Adjust all callers.
	(free_mem): New function.  Frees data associated with currently
	selected converters.

	* malloc/mtrace.pl: Extract addresses from DSOs.

2001-07-26  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mcheck.c (checkhdr): Disable mcheck before reporting an
	error.  Don't run any tests if mcheck is disabled.
