@@ -1,5 +1,9 @@
 2001-07-27  Ulrich Drepper  <drepper@redhat.com>
 
+	* libio/vasprintf.c (_IO_vasprintf): Don't copy uninitialized byte
+	from stream buffer to result buffer.
+	Reported by Michael Meeks <michael@ximian.com>.
+
 	* libio/Makefile: Add rules to check output of tst-fopenloc and
 	for memory leaks.
 	* libio/tst-fopenloc.c: New file.
